DMP-2954:Correctly fetch transcription requester for migrated cases