@@ -4,6 +4,7 @@ import lombok.extern.slf4j.Slf4j;
 import uk.gov.hmcts.darts.common.entity.HearingEntity;
 import uk.gov.hmcts.darts.common.entity.TranscriptionEntity;
 import uk.gov.hmcts.darts.common.model.TranscriptModel;
+import uk.gov.hmcts.darts.transcriptions.util.TranscriptionUtil;
 
 import java.util.ArrayList;
 import java.util.List;
@@ -28,24 +29,17 @@ public abstract class TranscriptionMapper<T extends TranscriptModel> {
                 transcript.setHearingDate(transcriptionEntity.getHearingDate());
             }
         } else {
-            HearingEntity hearing = hearings.get(0);
+            HearingEntity hearing = hearings.getFirst();
             transcript.setHearingId(hearing.getId());
             transcript.setHearingDate(hearing.getHearingDate());
         }
         transcript.setType(transcriptionEntity.getTranscriptionType().getDescription());
         transcript.setRequestedOn(transcriptionEntity.getCreatedDateTime());
-        transcript.setRequestedByName(getRequestedBy(transcriptionEntity));
+        transcript.setRequestedByName(TranscriptionUtil.getRequestedByName(transcriptionEntity));
         transcript.setStatus(transcriptionEntity.getTranscriptionStatus().getStatusType());
         return transcript;
     }
 
     protected abstract T createNewTranscription();
 
-    private String getRequestedBy(TranscriptionEntity transcriptionEntity) {
-        if (transcriptionEntity.getCreatedBy() != null) {
-            return transcriptionEntity.getCreatedBy().getUserFullName();
-        } else {
-            return transcriptionEntity.getRequestedBy().getUserFullName();
-        }
-    }
 }
